# logterm

./: LICENSE.md  README.md  pyproject.toml
src/logterm/: __init__.py
src/logterm/app/: main.py
src/logterm/app/widgets/: logtable.py
src/logterm/core/: fmt.py
src/logterm/core/log/: log.py  stream.py  struct.py
tests/: test_logterm.py
