[project]
name = "logterm"
version = "0.1.2"
description = "A library and CLI tool for analysing log files 🧐"
readme = "README.md"
authors = [
    { name = "fburleson", email = "joelburleson0104@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=15.0.0",
    "textual>=8.2.4",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "conventional-pre-commit>=4.4.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[project.scripts]
logterm = "logterm.app.main:cli"
